folder1/folder2/folder3/objects/LiveText__SMS_Schedule__c.object
<CustomObject>
    <description>Object for sending out a scheduled SMS</description>
    <fields>
        <fullName>LiveText__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related account object that generated this SMS</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SMS_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact that generated this SMS</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SMS_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__EnforceObjectPresence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked and the object specified by ObjectId is is deleted, the send will fail.</description>
        <label>EnforceObjectPresence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Lead that generated this SMS</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>SMS_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__LiveText_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The LiveMessage number to send the SMS from.</description>
        <label>LiveMessage Number</label>
        <referenceTo>LiveText__LiveText_Number__c</referenceTo>
        <relationshipName>SMS_Schedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Message__c</fullName>
        <description>SMS Message to send</description>
        <label>Message</label>
        <length>480</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__Object_Id__c</fullName>
        <description>The Id of the object that generated this SMS</description>
        <label>Object Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Reference_Id__c</fullName>
        <description>Unique Identifier for the flow related to this SMS</description>
        <label>Reference Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Schedule_Date__c</fullName>
        <description>The date and time to send this SMS</description>
        <label>Schedule Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LiveText__To_Phone_Number__c</fullName>
        <description>The phone number to send the SMS to</description>
        <label>To Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LiveText__Use_Queueable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, send message using queueable queue.</description>
        <label>Use Queueable</label>
        <type>Checkbox</type>
    </fields>
    <label>SMS Schedule</label>
    <nameField>
        <label>SMS Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>